Added support for Java 18.