@@ -1,6 +1,6 @@
 /*
  * aoserv-daemon - Server management daemon for the AOServ Platform.
- * Copyright (C) 2018, 2019, 2020, 2021  AO Industries, Inc.
+ * Copyright (C) 2018, 2019, 2020, 2021, 2022  AO Industries, Inc.
  *     support@aoindustries.com
  *     7262 Bull Pen Cir
  *     Mobile, AL 36695
@@ -168,6 +168,8 @@ public abstract class VersionedTomcatCommon extends TomcatCommon {
 		}
 		return bout.toByteArray();
 	}
+
+	// Java 18: Add "-Djava.security.manager=allow" by default for Tomcat?
 
 	protected static byte[] generateProfileJavaServerSh(String optSlash, String apacheTomcatDir, PosixFile installDir) throws IOException {
 		ByteArrayOutputStream bout = new ByteArrayOutputStream();
